Revision history for Dist-Zilla-Plugin-GitIgnore

{{$NEXT}}
          - Improve patterns for distribution tarball / directory

0.001     2025-07-20 18:02:12+02:00 Europe/Brussels
          Initial release to an unsuspecting world